--- a/Xdisplayname/src/index.css
+++ b/Xdisplayname/src/index.css
@@ -13,15 +13,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -33,6 +24,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #f9f9f9;
 }
 
 button {
